[tool.poetry]
name = "llamacpp"
version = "0.1.5"
description = "Python bindings for @ggerganov's llama.cpp"
authors = ["Thomas Antony <mail@thomasantony.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thomasantony/llamacpp-python"
repository = "https://github.com/thomasantony/llamacpp-python"
packages = [{ include = "llamacpp", from = "." }]

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.13.1"
sentencepiece = "^0.1.97"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.scripts]
llamacpp-convert = 'llamacpp.convert:main'
llamacpp-quantize = 'llamacpp.quantize:main'
llamacpp-cli = 'llamacpp.cli:run'
llamacpp-chat = 'llamacpp.chat:run'

[tool.cibuildwheel]

# Install something required for the build
# (you might want to use build-system.requires instead)
before-build = "pip install -U \"pybind11[global]\""
# Skip PyPy and 32-bit builds
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux_i686"]
