[build-system]
requires = ["scikit-build-core>=0.2.1", "pybind11>2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "llamacpp"
version = "0.1.14"
description = "Python bindings for @ggerganov's llama.cpp"
authors = [
    {name = "Thomas Antony", email= "mail@thomasantony.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://github.com/thomasantony/llamacpp-python"
repository = "https://github.com/thomasantony/llamacpp-python"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[project.scripts]
llamacpp-convert = 'llamacpp.convert:main'
llamacpp-quantize = 'llamacpp.quantize:main'
llamacpp-cli = 'llamacpp.cli:run'
llamacpp-chat = 'llamacpp.chat:run'

[tool.cibuildwheel]
test-command = "python -c \"import llamacpp\""

# Skip Python 3.6, PyPy and 32-bit builds
skip = ["cp36-*", "pp*", "*-win32", "*-manylinux_i686", "*-musllinux_i686"]

build-verbosity = 3
test-skip = ["*_arm64", "*_universal2:arm64"]
